--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ghelius.artifacts.artifacts.MainActivity">
-    <ImageView
-        android:id="@+id/main_pic"
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/main_fragment_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent">
+
+    </LinearLayout>
+
 
 </RelativeLayout>
