--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,13 +20,39 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:paddingTop="?attr/actionBarSize"
-        android:orientation="vertical"
-        android:id="@+id/main_fragment_holder"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </LinearLayout>
+        <LinearLayout
+            android:paddingTop="?attr/actionBarSize"
+            android:orientation="vertical"
+            android:id="@+id/main_fragment_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/main_progress_fade"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#99000000"
+            android:clickable="true"
+            >
+            <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/progress_view"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cpv_color="@color/cpv_default_color"
+                app:cpv_animAutostart="true"
+                app:cpv_indeterminate="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="230dp"
+                />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
 
 
 </android.support.design.widget.CoordinatorLayout>
