--- a/app/src/main/res/layout/fragment_choose_author_game.xml
+++ b/app/src/main/res/layout/fragment_choose_author_game.xml
@@ -7,12 +7,24 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/main_pic"
-            android:layout_width="match_parent"
+        <RelativeLayout
             android:layout_weight="1"
-            android:layout_height="0dp" />
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <ImageView
+                android:id="@+id/main_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_centerInParent="true"
+                android:id="@+id/progress_view"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cpv_color="@color/cpv_default_color"
+                app:cpv_animAutostart="true"
+                app:cpv_indeterminate="true" />
+        </RelativeLayout>
 
         <LinearLayout
             android:paddingTop="16dp"
