--- a/app/src/main/res/layout/game_bottons_layout.xml
+++ b/app/src/main/res/layout/game_bottons_layout.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:columnCount="2"
     android:rowCount="2"
@@ -27,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="угадай автора"
+            android:text="Выбери художника"
             />
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -47,7 +48,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="угадай картину"
+            android:text="Выбери картину"
             android:layout_gravity="center_horizontal"
             />
     </LinearLayout>
@@ -68,7 +69,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="угадай направление"
+            android:text="Выбери направление"
             android:layout_gravity="center_horizontal"
             />
     </LinearLayout>
@@ -90,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="напиши автора"
+            android:text="Назови художника"
             />
     </LinearLayout>
 
