--- a/app/src/main/res/layout-land/fragment_choose_author_game.xml
+++ b/app/src/main/res/layout-land/fragment_choose_author_game.xml
@@ -7,58 +7,37 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/main_pic"
-            android:layout_width="match_parent"
+        <RelativeLayout
             android:layout_weight="1"
-            android:layout_height="0dp" />
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <ImageView
+                android:id="@+id/main_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:paddingTop="16dp"
-            android:layout_weight="0"
-            android:orientation="horizontal"
+            <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_centerInParent="true"
+                android:id="@+id/progress_view"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cpv_color="@color/cpv_default_color"
+                app:cpv_animAutostart="true"
+                app:cpv_indeterminate="true" />
+        </RelativeLayout>
+        <GridView
+            android:id="@+id/choose_button_grid_view"
+            android:numColumns="4"
+            android:horizontalSpacing="10dp"
+            android:verticalSpacing="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="14dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+        </GridView>
 
-
-
-                <TextView
-                    android:id="@+id/button_0"
-                    android:textAlignment="center"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp" />
-                <TextView
-                    android:id="@+id/button_1"
-                    android:textAlignment="center"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp" />
-
-
-                <TextView
-                    android:id="@+id/button_2"
-                    android:textAlignment="center"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp" />
-                <TextView
-                    android:id="@+id/button_3"
-                    android:textAlignment="center"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp" />
-
-
-
-
-
-        </LinearLayout>
     </LinearLayout>
 
 
