--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -21,10 +21,15 @@
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
+        android:paddingTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <fragment android:name="com.ghelius.artifacts.artifacts.MainMenuFragment"
+            android:layout_marginTop="20dp"
+            android:id="@+id/main_menu_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
         <LinearLayout
-            android:paddingTop="?attr/actionBarSize"
             android:orientation="vertical"
             android:id="@+id/main_fragment_holder"
             android:layout_width="match_parent"
@@ -46,7 +51,7 @@
                 app:cpv_animAutostart="true"
                 app:cpv_indeterminate="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="230dp"
+                android:layout_marginTop="165dp"
                 />
 
         </RelativeLayout>
