i forget what i did, it was too long, somethins like writing new game

--- a/app/src/main/res/layout/game_finished_dialog.xml
+++ b/app/src/main/res/layout/game_finished_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="22dp"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:textAlignment="center"
         />
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="Finish"
+            android:text="@string/finish"
             />
         <Space
             android:layout_width="50dp"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="Try more!"
+            android:text="@string/try_more"
             />
     </LinearLayout>
 
