add total movements count on gallery screen

--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -5,8 +5,15 @@
     <TextView
         android:gravity="center"
         android:id="@+id/authors_count"
-        android:padding="8dp"
-        android:textSize="22dp"
+        android:textSize="22sp"
+        android:textColor="@android:color/darker_gray"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:gravity="center"
+        android:id="@+id/movements_count"
+        android:padding="4dp"
+        android:textSize="18sp"
         android:textColor="@android:color/darker_gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
