--- a/app/src/main/res/layout/gallery_author_item.xml
+++ b/app/src/main/res/layout/gallery_author_item.xml
@@ -27,13 +27,28 @@
             android:text="23"
             />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/movement_name"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/darker_gray"
-        android:text="Impressions"
-        />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/movement_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:textColor="@android:color/darker_gray"
+            />
+        <TextView
+            android:id="@+id/pic_by_level_count"
+            android:layout_weight="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
+            android:padding="4dp"
+            android:text="1:12, 2:10, 3:43"
+            />
+
+    </LinearLayout>
+
 
 </LinearLayout>
