TypeAuthor: fix counter, add textView hint, open keyboard onResume

--- a/app/src/main/res/layout/fragment_type_author_game.xml
+++ b/app/src/main/res/layout/fragment_type_author_game.xml
@@ -39,6 +39,7 @@
         android:layout_weight="0"
         android:completionThreshold="1"
         android:imeOptions="actionDone"
+        android:hint="@string/author_name_hint"
 
         android:inputType="text"
         android:maxLines="1"
