--- a/app/src/main/res/layout-land/fragment_choose_paint_game.xml
+++ b/app/src/main/res/layout-land/fragment_choose_paint_game.xml
@@ -25,6 +25,7 @@
         android:id="@+id/author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="14pt"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/paint_grid"
         android:layout_marginTop="30dp"
