--- a/app/src/main/res/layout-land/fragment_choose_paint_game.xml
+++ b/app/src/main/res/layout-land/fragment_choose_paint_game.xml
@@ -23,9 +23,11 @@
     <TextView
         android:gravity="center"
         android:id="@+id/author"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14pt"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textSize="12pt"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/paint_grid"
         android:layout_marginTop="30dp"
