--- a/app/src/main/res/layout/fragment_choose_paint_game.xml
+++ b/app/src/main/res/layout/fragment_choose_paint_game.xml
@@ -35,11 +35,13 @@
     <TextView
         android:gravity="center"
         android:id="@+id/author"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/grid_layout"
-        android:textSize="14pt"
+        android:textSize="12pt"
         android:layout_marginTop="50dp"
         />
     <RelativeLayout
