--- a/app/src/main/res/layout/choose_paint_item.xml
+++ b/app/src/main/res/layout/choose_paint_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorSelected"
@@ -9,4 +9,10 @@
         android:scaleType="centerCrop"
         android:layout_height="175dp"
         android:layout_width="wrap_content"/>
-</LinearLayout>
+    <ImageView
+        android:id="@+id/fail_mark"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/cross_shape"/>
+</RelativeLayout>
