--- a/app/src/main/res/layout/game_bottons_layout.xml
+++ b/app/src/main/res/layout/game_bottons_layout.xml
@@ -13,7 +13,7 @@
     android:gravity="center"
     android:layout_centerInParent="true"
     android:layout_centerVertical="true"
-    android:layout_marginTop="20dp"
+    android:padding="10dp"
     >
 
 </GridView>
