--- a/app/src/main/res/layout/game_button_item.xml
+++ b/app/src/main/res/layout/game_button_item.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="140dp"
-        android:layout_height="140dp" />
+        android:background="@color/colorPrimary"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="160dp" />
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:padding="5dp"
         android:textColor="@color/common_google_signin_btn_text_light"
         />
 
