--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorSelected">#55000000</color>
+    <color name="red_mark_body">#ffcece</color>
+    <color name="red_mark_border">#ff7070</color>
+    <color name="green_mark_border">#1ab61a</color>
+    <color name="green_mark_body">#b1f9b8</color>
 </resources>
