--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,7 +12,7 @@
             android:title="@string/statistics" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_share"
             android:title="@string/preference" />
         <item
             android:id="@+id/nav_gallery"
