fix layout in choose paint

--- a/app/src/main/res/layout/choose_paint_item.xml
+++ b/app/src/main/res/layout/choose_paint_item.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:background="@color/colorSelected"
     >
-    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.ghelius.artifacts.artifacts.SquareImageView
         android:id="@+id/picture"
         android:scaleType="centerCrop"
-        android:layout_height="175dp"
-        android:layout_width="wrap_content"/>
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
     <ImageView
         android:id="@+id/fail_mark"
         android:layout_width="100dp"
