--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -7,8 +7,12 @@
 
     <TextView
         android:id="@+id/statistic_label"
+        android:textSize="20dp"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:text="@string/statistics_title" />
 
     <ListView
