--- a/app/src/main/res/layout/game_finished_dialog.xml
+++ b/app/src/main/res/layout/game_finished_dialog.xml
@@ -15,6 +15,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/finish_button"
