--- a/app/src/main/res/layout/fragment_type_author_game.xml
+++ b/app/src/main/res/layout/fragment_type_author_game.xml
@@ -27,10 +27,11 @@
         <TextView
             android:id="@+id/author_name_hint"
             android:textSize="28sp"
-            android:layout_centerInParent="true"
-            android:gravity="center"
+            android:gravity="bottom|center"
+            android:background="@color/colorAccent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
             />
     </RelativeLayout>
 
