--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,20 +4,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_level"
-            android:icon="@drawable/ic_menu_level"
+            android:icon="@drawable/ic_terrain_black_24dp"
             android:title="@string/levels" />
         <item
             android:id="@+id/nav_statistics"
-            android:icon="@drawable/ic_menu_statistics"
+            android:icon="@drawable/ic_assessment_black_24dp"
             android:title="@string/statistics" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_share"
-            android:title="@string/preference" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/gallery" />
+        <!--<item-->
+            <!--android:id="@+id/nav_settings"-->
+            <!--android:icon="@drawable/ic_menu_share"-->
+            <!--android:title="@string/preference" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_gallery"-->
+            <!--android:icon="@drawable/ic_menu_gallery"-->
+            <!--android:title="@string/gallery" />-->
     </group>
 
 </menu>
