--- a/app/src/main/res/layout/choose_paint_item.xml
+++ b/app/src/main/res/layout/choose_paint_item.xml
@@ -9,9 +9,10 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
     <ImageView
+        android:padding="8dp"
         android:id="@+id/fail_mark"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/cross_shape"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignRight="@id/picture"
+        />
 </RelativeLayout>
