--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_level"
-            android:icon="@drawable/ic_terrain_black_24dp"
+            android:icon="@drawable/ic_school_black_24dp"
             android:title="@string/levels" />
         <item
             android:id="@+id/nav_statistics"
@@ -18,6 +18,10 @@
             <!--android:id="@+id/nav_gallery"-->
             <!--android:icon="@drawable/ic_menu_gallery"-->
             <!--android:title="@string/gallery" />-->
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_info_black_24dp"
+            android:title="@string/about" />
     </group>
 
 </menu>
