--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_level"
             android:icon="@drawable/ic_school_black_24dp"
@@ -10,6 +10,10 @@
             android:id="@+id/nav_statistics"
             android:icon="@drawable/ic_assessment_black_24dp"
             android:title="@string/statistics" />
+        <item
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/ic_favorite_black_24dp"
+            android:title="@string/favorites" />
         <!--<item-->
             <!--android:id="@+id/nav_settings"-->
             <!--android:icon="@drawable/ic_settings_applications_black_24dp"-->
