--- a/app/src/main/res/layout/fragment_choose_paint_game.xml
+++ b/app/src/main/res/layout/fragment_choose_paint_game.xml
@@ -25,6 +25,7 @@
         </GridView>
         <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_centerInParent="true"
+            android:visibility="invisible"
             android:id="@+id/progress_view"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -61,10 +62,9 @@
         <ImageView
             android:id="@+id/full_image"
             android:scaleType="fitCenter"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             />
         </RelativeLayout>
