--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -7,37 +7,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+        <ImageView
+            android:id="@+id/hist_image"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
         <TextView
             android:id="@+id/hist_pic_name"
-            android:paddingTop="10dp"
             android:textColor="#000000"
-            android:layout_gravity="center"
-            android:textSize="9pt"
+            android:textSize="7pt"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:textColor="#88000000"
-            android:layout_gravity="center"
-            android:textSize="8pt"
+            android:textSize="7pt"
             android:text="Какое то название картины"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:textColor="#88000000"
-            android:layout_gravity="center"
-            android:textSize="7pt"
+            android:textSize="6pt"
             android:text="Импрессионизм"
-            android:paddingBottom="10dp"
+            android:paddingBottom="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <ImageView
-            android:id="@+id/hist_image"
-            android:scaleType="fitCenter"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:paddingBottom="20dp"
-            />
 
     </LinearLayout>
 
