--- a/app/src/main/res/layout/fragment_history_list.xml
+++ b/app/src/main/res/layout/fragment_history_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ghelius.artifacts.artifacts.HistoryList">
+    tools:context="com.ghelius.artifacts.artifacts.HistoryFragment">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
