--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -5,17 +5,8 @@
     android:layout_height="match_parent"
     tools:context="com.ghelius.artifacts.artifacts.StatisticFragment">
 
-    <TextView
-        android:id="@+id/statistic_label"
-        android:textSize="20dp"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="@string/statistics_title" />
-
     <ListView
+        android:layout_marginTop="10dp"
         android:id="@+id/statistic_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
