--- a/app/src/main/res/layout/statistic_game_item.xml
+++ b/app/src/main/res/layout/statistic_game_item.xml
@@ -6,57 +6,81 @@
     <com.ghelius.artifacts.artifacts.SquareImageView
         android:id="@+id/game_icon"
         android:padding="5dp"
-        android:layout_marginLeft="10dp"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:src="@drawable/icon0"
         />
-    <TextView
-        android:id="@+id/game_name"
-        android:textColor="#000000"
-        android:layout_gravity="center"
-        android:textSize="18dp"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <LinearLayout
-        android:layout_weight="0.1"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/true_count"
-            android:layout_gravity="center"
-            android:textColor="#000000"
-            android:textSize="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="18dp"
-            android:layout_gravity="center"
-            android:padding="2dp"
-            android:text = "/"
-            />
-        <TextView
-            android:id="@+id/total_count"
-            android:layout_gravity="center"
-            android:textColor="#000000"
-            android:textSize="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_width="match_parent"
+        android:layout_marginRight="10dp"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/game_name"
+                android:textColor="#000000"
+                android:textSize="19sp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <RatingBar
+                android:layout_gravity="center"
+                android:id="@+id/ratingBar"
+                android:isIndicator="true"
+                android:layout_marginTop="2dp"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="0.1"
+                />
 
-        <TextView
-            android:id="@+id/stat_percent"
-            android:layout_gravity="center_vertical"
-            android:gravity="right"
-            android:textColor="#000000"
-            android:textSize="18dp"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/you_hit"
+                />
+            <TextView
+                android:id="@+id/true_count"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:text = "@string/you_hit_from"
+                />
+            <TextView
+                android:id="@+id/total_count"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/stat_percent"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
