--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,10 +10,10 @@
             android:id="@+id/nav_statistics"
             android:icon="@drawable/ic_assessment_black_24dp"
             android:title="@string/statistics" />
-        <item
-            android:id="@+id/nav_favorites"
-            android:icon="@drawable/ic_favorite_black_24dp"
-            android:title="@string/favorites" />
+        <!--<item-->
+            <!--android:id="@+id/nav_favorites"-->
+            <!--android:icon="@drawable/ic_favorite_black_24dp"-->
+            <!--android:title="@string/favorites" />-->
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history_black_24dp"
