--- a/app/src/main/res/layout/fragment_history_list.xml
+++ b/app/src/main/res/layout/fragment_history_list.xml
@@ -3,17 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.ghelius.artifacts.artifacts.HistoryFragment">
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/history_empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_margin="50dp"
+            android:textColor="#000000"
+            android:textSize="16dp"
+            android:text="@string/favorites_empty_msg"/>
         <ListView
             android:id="@+id/history_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </ListView>
-
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </FrameLayout>
