parse and show more data for history

--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -14,26 +14,75 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-        <TextView
-            android:id="@+id/hist_pic_name"
-            android:textColor="#000000"
-            android:textSize="7pt"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textColor="#88000000"
-            android:textSize="7pt"
-            android:text="Какое то название картины"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textColor="#88000000"
-            android:textSize="6pt"
-            android:text="Импрессионизм"
-            android:paddingBottom="40dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_marginRight="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/hist_pic_name"
+                    android:textSize="7pt"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/hist_info"
+
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#e62034ac"
+                    android:textSize="7pt"
+                    android:gravity="right"
+                    android:text="Info"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/hist_author"
+                    android:textColor="#88000000"
+                    android:textSize="7pt"
+                    android:text="asdfasdf"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/hist_year"
+                    android:textColor="#88000000"
+                    android:textSize="7pt"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/hist_movement"
+                android:textColor="#88000000"
+                android:textSize="6pt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/hist_holder"
+                android:textColor="#88000000"
+                android:textSize="6pt"
+                android:paddingBottom="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
