add progress view on loading image, create color value

--- a/app/src/main/res/layout-land/fragment_choose_paint_game.xml
+++ b/app/src/main/res/layout-land/fragment_choose_paint_game.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:textColor="#ff000000"
         android:textSize="12pt"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/paint_grid"
