--- a/app/src/main/res/layout/statistic_game_item.xml
+++ b/app/src/main/res/layout/statistic_game_item.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/game_name"
-                android:textColor="#000000"
+                android:textColor="@color/gray_text_color"
                 android:textSize="19sp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,20 +54,20 @@
                 />
             <TextView
                 android:id="@+id/true_count"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:text = "@string/you_hit_from"
                 />
             <TextView
                 android:id="@+id/total_count"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
@@ -75,7 +75,7 @@
 
             <TextView
                 android:id="@+id/stat_percent"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
