--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -7,18 +7,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-        <ImageView
-            android:id="@+id/hist_image"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/history_image"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+            <ImageView
+                android:id="@+id/guessed_mark"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_alignBottom="@id/history_image"
+                android:src="@drawable/cross"
+                android:alpha=".8"
+                android:layout_width="24dp"
+                android:layout_height="24dp" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginBottom="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -28,9 +43,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/hist_pic_name"
+                    android:id="@+id/history_line_1"
                     android:textSize="7pt"
                     android:textColor="#000000"
+                    android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <LinearLayout
@@ -53,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/hist_author"
+                    android:id="@+id/history_line_2_first"
                     android:textColor="@color/gray_text_color"
                     android:textSize="7pt"
 
@@ -61,7 +77,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/hist_year"
+                    android:id="@+id/history_line_2_second"
                     android:textColor="@color/gray_text_color"
                     android:textSize="7pt"
 
@@ -70,16 +86,9 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/hist_movement"
+                android:id="@+id/history_line_3_first"
                 android:textColor="@color/gray_text_color"
                 android:textSize="6pt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/hist_holder"
-                android:textColor="@color/gray_text_color"
-                android:textSize="6pt"
-                android:paddingBottom="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
