--- a/app/src/main/res/layout/fragment_choose_paint_game.xml
+++ b/app/src/main/res/layout/fragment_choose_paint_game.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:textColor="@color/gray_text_color"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/grid_layout"
         android:textSize="12pt"
