retain toast after rotation, fix long picture name in history spoils the date text

--- a/app/src/main/res/layout/game_bottons_layout.xml
+++ b/app/src/main/res/layout/game_bottons_layout.xml
@@ -19,9 +19,9 @@
     <LinearLayout
         android:id="@+id/main_menu_toast"
         android:visibility="gone"
-        android:layout_below="@id/main_menu_grid"
+        android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         >
@@ -29,6 +29,8 @@
         <TextView
             android:id="@+id/toast_text"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_gravity="center_vertical"
             android:layout_width="0dp"
             android:layout_weight="1"
